petclinic-frontend/manifests/routes-tmpl.yaml
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: petclinic-frontend-destination
  namespace: petclinic
spec:
  host: petclinic-frontend.petclinic.svc.cluster.local
  subsets:
    - name: prod
      labels:
        version: prod
    - name: baseline
      labels:
        version: baseline
    - name: canary
      labels:
        version: canary
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: petclinic-frontend-routes
  namespace: petclinic
spec:
  hosts:
    - '*'
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            prefix: "/api/gateway"
      route:
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: prod
          weight: ${100-2*#toInt(#currentStage().name.substring(5, 7))}
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: baseline
          weight: ${#toInt(#currentStage().name.substring(5, 7))}
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: canary
          weight: ${#toInt(#currentStage().name.substring(5, 7))}
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: prod
          weight: ${100-2*#toInt(#currentStage().name.substring(5, 7))}
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: baseline
          weight: ${#toInt(#currentStage().name.substring(5, 7))}
        - destination:
            host: petclinic-frontend.petclinic.svc.cluster.local
            port:
              number: 8080
            subset: canary
          weight: ${#toInt(#currentStage().name.substring(5, 7))}
